# finder

./: README.md  meson.build
example/: main.cpp  meson.build
include/: finder.hpp
src/: finder.cpp
test/: filter_test.cpp  meson.build
